taking this for a spin

--- a/2019-08-01.html
+++ b/2019-08-01.html
@@ -5,3 +5,19 @@
 <p>simple, brutalist HTML for now (if you can even call it that, it's not like... valid html or anything</p>
 
 <p>sometimes the medium is more important.</p>
+
+<strong>thinking outside the screen</strong>
+
+<p>i think we need better tools to model and "shape" software outside of the box of prototyping tools. framer, figma, sketch, and the rest, are all good at the visual approach to UI design, but we need to operate on better primitives than "rectangles on a screen".</p>
+
+<p>not only that, but the thought of designing and building "screens" is actively harmful to those of us trying to design <em>real</em> UIs and create innovative products. we should be working at the level of affordances and concepts.</p>
+
+<p>the work of creating interesting and novel UI is mostly in not boxing yourself into a design that you've chosen for no good reason in particular. most of the time it's just the first one that comes to mind, and we end up going with it because... reasons? i guess? think of how much better the process could be and who else could be involved in it if we werent just thinking about the damn screens all the time</p>
+
+<p>it's almost like building a web application by only asking what kind of database tables you're going to need. it's absurd because it doesn't matter how awesome you are at designing databases or how many times you've built "similar" apps before, no two pieces of software are alike (and if they are, ask yourself: should you <em>really</em> be re-building it?)</p>
+
+<p>each new application that you build should make you re-consider the status quo. the tools we have don't let us do that.</p>
+
+<strong>one more for today</strong>
+
+<p>is the notion of behavior over <em>time</em> (redux devtools come to mind) enough to help us reason about programs, or do we need something more? </p>
