--- a/2019-07-30.html
+++ b/2019-07-30.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="style.css" />
+
 <strong>july 30, 2019</strong>
 
 <p>i'm going to start a short daily journal of the things i thought about and worked on (inspired by <a href="http://stevekrouse.com">steve krouse</a>), just need a quick way to edit, commit, and publish it.</p>
