--- a/2019-07-31.html
+++ b/2019-07-31.html
@@ -1,8 +1,10 @@
+<link rel="stylesheet" href="style.css" />
+
 <strong>july 31, 2019</strong>
 
-<p>"could you build this today?" answer this question at every stage of planning/breadboarding. if the answer is no then you need to ship something smaller. maybe start building and build until you can’t anymore?</p>
-
-￼<p>i also kind of liked the “sparks” idea from jen horkoffs work in requirements engineering where there are a whole bunch of stakeholders pre loaded in the system you’re designing with and it will prompt you to think about how a certain person would use the system or a part of the system. can basically capture everything. </p>
+<p>"could you build this today?" answer this question at every stage of planning/breadboarding. if the answer is no then you need to ship something smaller. maybe just start building and build until you can’t anymore?</p>
+  
+<p>i also kind of liked the "sparks" idea from jen horkoffs work in requirements engineering where there are a whole bunch of stakeholders pre loaded in the system you’re designing with and it will prompt you to think about how a certain person would use the system or a part of the system. can basically capture everything. </p>
 
 <p>the separation between back and front ends really doesn’t work because all the design work gets front loaded into the sprint before the backend stuff. everything good that we have shipped has either been designed and developed in tandem or the backend already existed to create those things and enable them </p>
 
