new post today about my walk yesterday

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <br /><br />
 
 <ul>  
+  <li><a href="2019-08-06.html">2019-08-06 10:24 MST</a></li>
   <li><a href="2019-08-01.html">2019-08-01 18:49 MST</a></li>
   <li><a href="2019-07-31.html">2019-07-31 20:56 MST</a></li>
   <li><a href="2019-07-30.html">2019-07-30 08:18 MST</a></li>
