--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <em>f(programmer)</em>
 <br /><br />
 
-<ul>  
+<ul>
+  <li><a href="2019-08-07.html">2019-08-07 23:16 MST</a></li>
   <li><a href="2019-08-06.html">2019-08-06 10:24 MST</a></li>
   <li><a href="2019-08-01.html">2019-08-01 18:49 MST</a></li>
   <li><a href="2019-07-31.html">2019-07-31 20:56 MST</a></li>
