please tweet at me i'm so lonely

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="style.css" />
 
-<em>f(programmer)</em>
+<em>f(programmer)*</em>
 <br /><br />
 
 <ul>
@@ -10,3 +10,6 @@
   <li><a href="2019-07-31.html">2019-07-31 20:56 MST</a></li>
   <li><a href="2019-07-30.html">2019-07-30 08:18 MST</a></li>
 </ul>
+
+<br />
+<p style="color: #999; text-align: right;">* a <a href="https://twitter.com/crabl">crabl</a> thing</p>
