gitignore, stylesheet updates, images dir, and a new post about unison

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <br /><br />
 
 <ul>
+  <li><a href="2019-08-25.html">2019-08-25 13:45 MST</a></li>
   <li><a href="2019-08-07.html">2019-08-07 23:16 MST</a></li>
   <li><a href="2019-08-06.html">2019-08-06 10:24 MST</a></li>
   <li><a href="2019-08-01.html">2019-08-01 18:49 MST</a></li>
